# hf

./: README.md  pyproject.toml  setup.py
src/hf/: __init__.py  cli.py
tests/: test_cli.py
