[project]
name = "hf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.24.6",
    "fire>=0.6.0",
]

[project.scripts]
hf = "hf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
